# Lumina-india-engine

./: .env.example  .gitignore  ACTIVE_CONTEXT.md  CLAUDE.md  Dockerfile  HANDOFF_INDIA_SIGNAL_QUALITY.md  INDIA_MARKET_DOCTRINE.md  OWNER_BRIEF.md  PLAN_INDIA_SIGNAL_QUALITY.md  README.md  deploy.sh  docker-compose.india.yml  healthcheck.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: __init__.py  earnings_events.json  macro_events.json  nse_holidays.json
docs/: OWNER_MANUAL.md  STRATEGY_GAP_REBUILD.md  lumin_india_spec_part1.md
scripts/: fyers_refresh.py  fyers_token.py  vps_bootstrap.sh
src/: __init__.py  db.py  db_backup.py  dependency.py  fcm_dispatcher.py  indicators.py  level_book.py  main.py  market_context.py  market_profile.py  order_blocks.py  owner_alerts.py  patterns.py  regime.py  signal_quality.py  signal_router.py  signal_store.py  strategy_allocator.py  strategy_edge.py  structure_state.py  trade_monitor.py  utils.py
tests/: candle_factory.py  conftest.py  signal_factory.py  test_admin_endpoints.py  test_angel_feed.py  test_api.py  test_audit_fixes.py  test_bias_v2.py  test_channels_breakout.py  test_channels_extremes.py  test_channels_lsr.py  test_channels_qcb_mac_egs.py  test_channels_sr_far_div.py  test_channels_trend_oi.py  test_config.py  test_context_builder.py  test_dependency.py  test_direction_bias_gate.py  test_earnings_blackout_gate.py  test_edge_adjust.py  test_emission_discipline.py  test_expiry_manager.py  test_fcm_dispatcher.py  test_feed_freshness.py  test_fyers_callback.py  test_fyers_feed.py  test_indicators.py  (+37 more)
(+34 files in other folders)
